Fixing vertical height on iOS Safari mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -459,6 +459,11 @@ body { /* html won't work for Safari ¯\_(ツ)_/¯ */
     border-bottom: 0.1rem solid #979797;
   }
 
+  #portfolio .swiper-container {
+    height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
+  }
+
   /* SwiperJS */
   .swiper-container {
     overflow-x: hidden;
